added script to match diff level with number of pairs

--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pexeso - Výběr obtížnosti</title>
-    <style>
-        /* Styly pro karty budou přidány později */
-    </style>
+    <title>Pexeso game</title>
 </head>
 <body>
     <h1>Výběr obtížnosti</h1>
     <p>Vyberte obtížnost:</p>
     <label>
-        <input type="radio" name="difficulty" value="easy"> Snadná
+        <input type="radio" name="difficulty" > Snadná
     </label>
     <label>
-        <input type="radio" name="difficulty" value="medium"> Střední
+        <input type="radio" name="difficulty" > Střední
     </label>
     <label>
-        <input type="radio" name="difficulty" value="hard"> Těžká
+        <input type="radio" name="difficulty" > Těžká
     </label>
-    <button id="start-button">Začít hru</button>
+    <button id="start-button" onclick="pairsMatchDiff()">Začít hru</button>
 
     <div id="memory-game" style="display: none;">
         <!-- Zde budou karty generovány dynamicky -->
     </div>
+
+
+   <script src="script.js"></script> 
+</body>
+</html>
