added few styling things and js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="center-align">
         <button
           id="start-button"
-          onclick="pairsMatchDiff()"
+          onclick="startGame()""
           class="center-align buton-style"
         >
           Začít hru
