pridany js kod pro tvorbu karet- zbytek blbustky

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       <div class="diffChoose">
         <div class="center-align">
           <label class="label-style" onclick="changeBackground()" name="label">
-            <input type="radio" class="skryty" name="difficulty" />
+            <input type="radio" class="hidden" name="difficulty" />
             <p class="diff">Lehká</p>
           </label>
         </div>
 
         <div class="center-align">
           <label class="label-style" name="label" onclick="changeBackground()">
-            <input type="radio" class="skryty" name="difficulty" />
+            <input type="radio" class="hidden" name="difficulty" />
             <p class="diff">Střední</p>
           </label>
         </div>
 
         <div class="center-align">
           <label class="label-style" onclick="changeBackground()" name="label">
-            <input type="radio" class="skryty" name="difficulty" />
+            <input type="radio" class="hidden" name="difficulty" />
             <p class="diff">Těžká</p>
           </label>
         </div>
@@ -47,7 +47,7 @@
 
     <section name="gameBoard" style="display: none">
       <div class="center-align">
-        <div id="memory-game" class="gameboard18">
+        <div id="memory-game" class="">
           <!-- Zde budou karty generovány dynamicky -->
         </div>
       </div>
