--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <section name="gameBoard" style="display: none">
       <div class="center-align">
         <div id="memory-game" class="">
+          <div class="gameCard">
+            <div class="gameCardFront"></div>
+            <div class="gameCardBack"><img src="images/img1.png" alt=""></div>
+          </div>
           <!-- Zde budou karty generovány dynamicky -->
         </div>
       </div>
