small changes + working on big one

--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
     <section name="gameBoard" style="display: none">
       <div class="center-align">
         <div id="memory-game" class="">
-          <div class="gameCard">
-            <div class="gameCardFront"></div>
-            <div class="gameCardBack"><img src="images/img1.png" alt=""></div>
-          </div>
+         
           <!-- Zde budou karty generovány dynamicky -->
         </div>
       </div>
     </section>
 
     
-    <script src="script.js"></script>
+    <script src="JS/beforeGame.js"></script>
+    <script src="JS/gameplay.js"></script>
   </body>
 </html>
