vyresen problem s otacenim karet :)

--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     
     <script src="JS/beforeGame.js"></script>
     <script src="JS/gameplay.js"></script>
+    <script src="JS/players.js"></script>
   </body>
 </html>
