--- a/index.html
+++ b/index.html
@@ -48,10 +48,25 @@
 
     <section name="gameBoard" style="display: none">
       <div class="center-align">
+        <section name = "playerSection" class="playerSection">
+          <div class="player1">Hráč 1
+
+            <div class="player1Score">5</div>
+          </div>
+        </section>
+
+        
+
         <div id="memory-game" class="">
          
           <!-- Zde budou karty generovány dynamicky -->
         </div>
+        <section name="playerSection" class="playerSection">
+          <div class="player2">Hráč 2
+
+            <div class="player2Score">2</div>
+          </div>
+        </section>
       </div>
     </section>
 
