--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
      
       <div class="center-align">
         <section name="playerSection" id="playerSection2">
-          <div class="player2">Hráč 2
-            <div class="player2Score">2</div>
+          <div class="player2" id="player2">Hráč 2
+            <div class="player2Score" id="player2Score">2</div>
           </div>
         </section>
         <section name = "playerSection" id="playerSection">
-          <div class="player1">Hráč 1
-            <div class="player1Score">5</div>
+          <div class="player1" id="player1">Hráč 1
+            <div class="player1Score" id="player1Score">5</div>
           </div>
         </section>
         <div id="memory-game" class="">
