--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="media-querry.css">
+    <link rel="stylesheet" href="PublicStyles/styles.css" />
+    <link rel="stylesheet" href="PublicStyles/media-querry.css">
     <title>Pexeso game</title>
   </head>
   <body>
