Update Tailwind configuration and remove unused JavaScript and HTML files

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,18 @@
      <link rel="stylesheet" href="CSS/styles.css"> 
     <link rel="stylesheet" href="CSS/output.css">
     <link rel="stylesheet" href="/CSS/media-querry.css" />
-
     <title>Pexeso game</title>
   </head>
   <body>
 
-    <nav name="navbar" class= "h-11 flex justify-center bg-stone-200 ">
-      <div name="About us" class=" min-w-fit h-60px bg-stone-600 text-center">
-        <a href="aboutUs.html" class="">O nás</a>
-        
+    <nav name="navbar" class= "h-20 flex startSection justify-evenly font-setter bg-stone-200 items-center font-medium">
+      <h1 class="text-4xl inlflex font-bold">Pexeso</h1>
+      <div name="playAGame" class="w-fit h-10 bg-stone-600  text-2xl inline-flex p-1 m-9">
+        <a href="index.html" class="">Play a game</a>
+      </div>
+
+      <div name="About us" class=" w-fit h-10 bg-stone-600  justify-center text-2xl inline-flex p-1 m-9">
+        <a href="#" class="">About me</a>
       </div>
 
 
