Add new CSS classes and update navbar styles

--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link rel="stylesheet" href="CSS/styles.css"> 
-    <link rel="stylesheet" href="CSS/output.css">
+     <link rel="stylesheet" href="/CSS/styles.css"> 
+    <link rel="stylesheet" href="/CSS/output.css">
     <link rel="stylesheet" href="/CSS/media-querry.css" />
     <title>Pexeso game</title>
   </head>
   <body>
 
-    <nav name="navbar" class= "h-20 flex startSection justify-evenly font-setter bg-stone-200 items-center font-medium">
-      <h1 class="text-4xl inlflex font-bold">Pexeso</h1>
-      <div name="playAGame" class="w-fit h-10 bg-stone-600  text-2xl inline-flex p-1 m-9">
+    <nav name="navbar" class= "h-21 flex startSection justify-evenly font-setter bg-white items-center font-medium">
+      <h1 class="text-5xl inline-flex font-bold">Pexeso</h1>
+      <div name="playAGame" class="w-fit h-10 bg-orange-400 text-2xl inline-flex p-1 m-9 outline-red-500
+       NavButton hover:-translate-y-1 hover:scale-110 hover:bg-gradient-to-r hover:from-orange-400 hover:to-red-500 duration-300
+       rounded-lg">
         <a href="index.html" class="">Play a game</a>
       </div>
 
-      <div name="About us" class=" w-fit h-10 bg-stone-600  justify-center text-2xl inline-flex p-1 m-9">
+      <div name="About us" class=" w-fit h-10 bg-orange-400  text-2xl inline-flex p-1 m-9 
+      NavButton hover:-translate-y-1 hover:scale-110 hover:bg-gradient-to-r hover:from-orange-400 hover:to-red-500 duration-300
+     
+      ">
         <a href="#" class="">About me</a>
       </div>
 
