Update CSS styles and HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,20 @@
   </head>
   <body>
 
-    <nav name="navbar" class= "h-21 flex startSection justify-evenly font-setter bg-white items-center font-medium">
+    <nav name="navbar" class= "h-25 flex startSection justify-evenly font-setter bg-white items-center font-medium">
       <h1 class="text-5xl inline-flex font-bold">Pexeso</h1>
-      <div name="playAGame" class="w-fit h-10 bg-orange-400 text-2xl inline-flex p-1 m-9 outline-red-500
-       NavButton hover:-translate-y-1 hover:scale-110 hover:bg-gradient-to-r hover:from-orange-400 hover:to-red-500 duration-300
-       rounded-lg">
+        <div name="playAGame" class="w-fit h-10 bg-orange-400 text-2xl inline-flex padX2 m-9 outline outline-8 outline-orange-400 border-2 border-orange-300 
+        NavButton  hover:scale-110 hover:bg-gradient-to-br hover:from-orange-400 hover:from-30% hover:to-red-500 duration-300
+        rounded-full">
         <a href="index.html" class="">Play a game</a>
-      </div>
 
-      <div name="About us" class=" w-fit h-10 bg-orange-400  text-2xl inline-flex p-1 m-9 
-      NavButton hover:-translate-y-1 hover:scale-110 hover:bg-gradient-to-r hover:from-orange-400 hover:to-red-500 duration-300
-     
-      ">
+    </div>
+        <div name="About us" class="  h-10 bg-orange-400  text-2xl  padX2 m-9 border-2 border-orange-300 
+        NavButton  hover:scale-110 hover:bg-gradient-to-br hover:from-orange-400 hover:from-30% hover:to-red-500 duration-300
+        rounded-full
+        ">
         <a href="#" class="">About me</a>
-      </div>
-
+    </div>
 
     </nav>
     <section name="startSection" class="startSection bg-blue-200">
