Delete unused images and update CSS and HTML

--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,23 @@
     <nav name="navbar" class= "h-25 flex startSection justify-evenly font-setter bg-white items-center font-medium">
       <h1 class="text-5xl inline-flex font-bold">Khaoli</h1>
 
-        <div name="playAGame" class=" w-fit h-10 bg-orange-400 text-2xl inline-flex padX2 m-9 border-2 border-orange-300 
+        <div name="playAGame" class=" w-fit h-11 bg-orange-400 text-2xl inline-flex padX2 m-9 border-2 border-orange-300 items-center
         NavButton 
         rounded-full">
         <a href="index.html" class="">Play a game</a>
       </div>
 
-        <div name="About us" class="  w-fit h-10 bg-orange-400 text-2xl inline-flex padX2 m-9 border-2 border-orange-300 
+        <div name="About us" class="  w-fit h-11 bg-orange-400 text-2xl inline-flex padX2 m-9 border-2 border-orange-300 
         NavButton 
         rounded-full
         ">
         <a href="#" class="">About me</a>
     </div>
-
     </nav>
-    <section name="startSection" class="startSection bg-blue-200">
-      <h1 class="center-align header text-violet-500">Pexeso - The game</h1>
+    <section name="startSection" class=" bg-blue-200">
+      <div class="imgCenter">
+        <h2 class="text-violet-500 text-6xl">Pexeso</h2>
+      </div>
       <p class="center-align diffSetting">Vyberte obtížnost:</p>
       
       <div class="diffChoose">
