Update CSS styles and HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <nav name="navbar" class= "h-25 flex startSection justify-evenly font-setter bg-gray-100 items-center font-medium">
+    <nav name="navbar" class= "h-25 flex startSection justify-evenly font-setter bg-slate-200 items-center font-medium">
       <h1 class="text-5xl inline-flex font-bold">Khaoli</h1>
       
       <div name="playAGame" class=" w-fit h-11 bg-orange-400 text-2xl inline-flex padX2 m-9 border-2 border-orange-300 items-center
@@ -28,7 +28,7 @@
 </nav>
 
 <section name="startSection" class=" bg-blue-100 flex justify-center items-center flex-col border border-transparent rounded">
-<div name="wrapper" class="bg-gray-100 w-fit ">
+<div name="wrapper" class="bg-slate-200 w-fit ">
 
   <div class="relative text-center ">
     <img src="images/PexesoBG.jpg" alt="" class="imgCenter border border-transparent rounded">
@@ -36,7 +36,7 @@
     <h3 class="text-orange-400 text-7xl  top-2/3 dropShadow borderCustom centered">GAME</h3>
   </div>
   <div class="bg-inherit justify-center flex">
-    <p class=" diffSetting inline border-4 border-black px-3">Choose difficulty</p>
+    <p class=" diffSetting inline border-4 border-black px-3 bg-slate-400">Choose difficulty</p>
   </div>
   
   
