--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <nav
       name="navbar"
       class="h-25 flex startSection justify-evenly font-setter bg-slate-200 items-center font-medium"
-    >
+     id="navbar" >
       <h1 class="text-5xl inline-flex font-bold">Khaoli</h1>
 
       <div
@@ -62,6 +62,7 @@
               class="label-style flex flex-col border border-transparent rounded-lg"
               name="label"
             >
+              <img src="images/iloveimg-resized (1)/img2.png" alt="" class="imgEasy">
               <input type="radio" class="hidden" name="difficulty" />
               <p class="text-white mt-auto">Easy</p>
             </label>
