--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
               class="label-style flex flex-col border border-transparent rounded-lg"
               name="label"
             >
-              <img src="images/iloveimg-resized (1)/img2.png" alt="" class="imgEasy">
+              <img src="images/iloveimg-resized (1)/img2.png" alt="" class="">
               <input type="radio" class="hidden" name="difficulty" />
               <p class="text-white mt-auto">Easy</p>
             </label>
