--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </section>
 
-    <script src="JS/beforeGame.js"></script>
-    <script src="JS/gameplay.js"></script>
+    <script src="/docs/JS/beforeGame.js"></script>
+    <script src="/docs/JS/gameplay.js"></script>
   </body>
 </html>
